--- a/src/OurRange.css
+++ b/src/OurRange.css
@@ -35,7 +35,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 100vh;
+    height: 80vh;
     
     /* width: 20vw; */
 }
@@ -144,7 +144,7 @@
     display: flex;
     width: 100%;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     gap: 10px;
 }
 
@@ -154,7 +154,7 @@
 
  }
 } */
-@media screen and (max-width: 1111px) and (orientation:portrait) {
+@media screen and (max-width: 834px) and (orientation:portrait) {
     .range-outline {
         grid-template-rows: 1fr 2fr 7fr 1.5fr;
 
@@ -164,27 +164,18 @@
     width: 100%;
     }
 
-    
-}
-
-@media screen and (max-width: 1111px) and (orientation:portrait) {
-    .range-container {
-        /* height: 120vh; */
-    }
-
-    .range {
+       .range {
         height: 240vh ;
     }
-
-    
 }
+
 @media screen and (max-width: 555px) and (orientation:portrait){
     /* .range-container {
         height: 120vh;
     } */
-.range {
+/* .range {
     height: 480vh;
-}
+} */
     
 }
 
@@ -193,7 +184,7 @@
         height: 120vh;
     } */
 .range {
-    height: 540vh;
+    height: 440vh;
 }
 .range-container {
     height: 120vh;
@@ -228,7 +219,21 @@
     }
 } */
 
-@media screen and (max-width:1111px)  and (orientation: landscape) {
+
+@media screen  and (orientation: landscape) {
+
+.range-container{ 
+    /* background-color: blueviolet; */
+    height: 100vw;
+}
+.range-image-container {
+    height: 30vw;
+}
+.range {
+    height: 130vw;
+}
+}
+@media screen and (max-width:834px)  and (orientation: landscape) {
 
 .range-container{ 
     /* background-color: blueviolet; */
@@ -242,15 +247,31 @@
 }
 }
 
-@media screen and (min-height: 1000px) and (min-width:1111px){
+@media screen and (min-height: 1000px) and (min-width:1000px) and (orientation:portrait){
     .range-container {
-        height:80vh;
+        height:70vh;
+    }
+
+    .range {
+        height: 100vh;
     }
 
     
 
 }
 
+@media screen and (min-height: 1000px) and (min-width:1000px) and (orientation:landscape){
+    .range-container {
+        height:70vw;
+    }
+
+    .range {
+        height: 100vw;
+    }
+
+    
+
+}
 
 
 
