--- a/src/Contact.css
+++ b/src/Contact.css
@@ -167,7 +167,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    width: 95%;
+    /* width: 95%; */
     height: 100%;
     gap: 1%;
     margin: 1%;
