--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -2,6 +2,7 @@
 .logo {
     height: 100%;
     width: 120px;
+    object-fit: contain;
     /* border-radius: 30px; */
     /* padding: 0 5px; */
     /* padding-left: 20%; */
@@ -157,4 +158,11 @@
         /* line-height: 35px; */
     }
 
+}
+
+@media screen and (orientation: landscape) {
+
+    .logo {
+        object-fit: cover;
+    }
 }
