--- a/src/App.css
+++ b/src/App.css
@@ -123,10 +123,20 @@ section {
   color: white;
 }
 .our-story {
-height: 325vh;
+height: 395vh;
 width: 100%;
 }
-
+.about-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content:center; */
+  text-align: center;
+  width: 100%;
+  height: 70vh; 
+  background-color: rgb(176 ,191, 184);
+  color: white;
+}
 .our-story-section {
   /* padding-top: 100px; */
   display: flex;
@@ -217,7 +227,7 @@ nav {
 
 @media screen and (max-width: 850px) and (orientation: portrait) {
   .our-story {
-    height: 390vh;
+    height: 460vh;
      width: 100%;
   }
   .our-story-section {
@@ -230,7 +240,7 @@ nav {
 
 @media screen and (max-width: 700px) and (orientation: portrait) {
   .our-story {
-    height: 710vh;
+    height: 770vh;
      width: 100%;
   }
   .our-story-section-2 {
@@ -240,7 +250,7 @@ nav {
 
 @media screen and (max-width: 550px) and (orientation: portrait) {
   .our-story {
-    height: 855vh;
+    height: 965vh;
      width: 100%;
   }
   .our-story-section {
@@ -264,7 +274,7 @@ nav {
     }
 
      .our-story {
-    height: 915vh;
+    height: 1035vh;
      width: 100%;
   }
   .our-story-section {
@@ -277,11 +287,20 @@ nav {
 }
 
 
+@media screen and (max-width:900px)  and (orientation: landscape) {
+    /* .about-section {
+        height: 70vw;
+    } */
 
+    /* .our-story {
+        height: 610vw;
+    } */
+
+}
 
 @media screen and (max-width:900px)  and (orientation: landscape) {
   .our-story {
-    height: 540vw;
+    height: 610vw;
   }
 
   .our-story-section {
@@ -291,15 +310,28 @@ nav {
   .our-story-section-2 {
     height: 340vw;
   }
+  .about-section {
+   height: 70vw;
+  }
 
   .contact {
     height:100vw;
   }
 }
+@media screen and (max-width:700px)  and (orientation: landscape) {
+    .about-section {
+        height: 90vw;
+    }
+
+    .our-story {
+        height: 630vw;
+    }
+
+}
 
 @media screen and (max-width:600px)  and (orientation: landscape) {
   .our-story {
-    height: 720vw;
+    height: 810vw;
   }
 
   .our-story-section {
@@ -312,7 +344,7 @@ nav {
 
 @media screen and (max-width:500px)  and (orientation: landscape) {
   .our-story {
-    height: 800vw;
+    height: 890vw;
   }
 
   .our-story-section {
