--- a/src/About.css
+++ b/src/About.css
@@ -6,7 +6,7 @@
     width: 80%;
     height: 80%;
     margin: 0% 10%;
-    justify-content: space-around;
+    /* justify-content: space-evenly; */
     align-items: center;
     
 
@@ -14,7 +14,7 @@
 
 .about-heading {
     display: flex;
-    height: 20%;
+    /* height: 20%; */
     width: 80%;
     color:  rgb(52,85,69);
     align-items: center;
@@ -29,7 +29,7 @@
 
 .about-content {
     display: flex;
-    height: 50%;
+    /* height: 50%; */
     width: 80%;
     color: white;
     align-items: center;
