--- a/src/Difference.css
+++ b/src/Difference.css
@@ -153,6 +153,7 @@
     height: 100%;
     justify-content: flex-start;
     padding-top: 5%;
+    margin-top: 15vh;
     /* height: 40vh; */
     /* gap: 4vh; */
     /* background-color: yellow; */
