--- a/src/OurRange.css
+++ b/src/OurRange.css
@@ -3,6 +3,8 @@
   grid-template-columns:repeat(auto-fit, minmax(250px, 1fr));
   height: 80%;
   width: 90%;
+
+
  
 }
 .range-page-heading{
@@ -36,7 +38,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    height: 90vh;
+    height: 85vh;
+    /* background-color: red; */
+    max-height: 950px;
+  
     
     /* width: 20vw; */
 }
@@ -54,6 +59,7 @@
     font-weight: bold;
     color: yellow;
     margin: 10px 0;
+    /* background-color: white; */
    
 
 }
@@ -79,13 +85,14 @@
     font-family: 'Red Hat Display', sans-serif;
     font-size: 24px;
     color: white;
+    /* background-color: violet; */
 }
 
 .range-image-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 30vh;
+    height: 40%;
     width: 90%;
     margin: 0 5%;
     /* background-color: blue; */
@@ -100,20 +107,22 @@
 
 .range-detail {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
     width: 90%;
-    height: 40vh;
+    height: 35%;
     font-family: 'Red Hat Display', sans-serif;
     font-size: 16px;
     color: white;
     margin: 5% 5% 0 5%;
     text-align: left;
+    /* background-color: thistle; */
  
 }
 .range-link-container {
     display: flex;
     align-items: flex-end;
+    height: 15%;
     
     /* background-color: white; */
 }
@@ -127,7 +136,7 @@
     margin: 5%;
     border: 1px solid white;
     border-radius: 60px;
-     background-color: rgb(176 ,191, 184);
+    background-color: rgb(176 ,191, 184);
     
 
 }
@@ -159,49 +168,70 @@
 
  }
 } */
-@media screen and (max-width: 834px) and (orientation:portrait) {
+@media screen and (max-width: 869px) and (orientation:portrait) {
     .range-outline {
-        grid-template-rows: 1fr 2fr 7fr 1.5fr;
+        /* grid-template-rows: 1fr 2fr 7fr 1.5fr; */
 
     }
     .range-link {
-    height: 60px;
-    width: 100%;
+    /* height: 60px;
+    width: 100%; */
     }
     .range-container {
-        height: 90vh;
+        /* height: 90vh; */
     }
        .range {
-        height: 245vh ;
+        /* height: 225vh ; */
     }
 }
 
-@media screen and (max-width: 555px) and (orientation:portrait){
+@media screen and (max-width: 868px) and (orientation:portrait){
     /* .range-container {
         height: 120vh;
     } */
-/* .range {
-    height: 480vh;
-} */
+    .range {
+       height: 225vh;
+    }
     
 }
 
-@media screen and (max-width: 555px) and (orientation:portrait){
+@media screen and (max-width: 569px)  and (orientation:portrait){
+
+    .range {
+        height: 300vh;
+    }
+    .range-container {
+        /* height: 80v; */
+    }
+
+
+    .range-image-container {
+      height: 35%;
+    }
+    .range-detail {
+       height: 40%;
+    }   
+    
+}
+
+@media screen and (max-width: 375px) and (max-height:700px) and (orientation:portrait){
     /* .range-container {
         height: 120vh;
     } */
-.range {
-    height: 355vh;
-}
-.range-container {
-    height: 100vh;
-}
-.range-image-container {
-    height: 30vh;
-}
-.range-detail {
-    height:50vh;
-}
+    .range {
+        height: 380vh;
+    }
+    .range-container {
+        height: 110vh;
+    }
+
+
+    .range-image-container {
+        /* height: 30vh; */
+    }
+    .range-detail {
+        /* height:50vh; */
+    }
 }
 /* @media screen and (max-height:900px) and (orientation:portrait) {
     .range {
